--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List App</title>
-     
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -56,6 +56,6 @@
         <!-- Task list -->
         <ul id="task-list"></ul>
     </div>
-
+<script defer src="logic.js"></script>
 </body>
 </html>
